remove duplicate repository invocation